@@ -48,7 +48,7 @@ class SolrAggregate extends Aggregate implements SolrRel {
 
   // Returns the Solr agg metric identifier (includes column) for the SQL metric
   static String solrAggMetricId(String metric, String column) {
-    // CountDistinctMetric's getIdentifer returns "countDist" but all others return a lowercased
+    // CountDistinctMetric's getIdentifier returns "countDist" but all others return a lowercased
     // value
     String funcName =
         COUNT_DISTINCT.equals(metric) ? COUNT_DISTINCT : metric.toLowerCase(Locale.ROOT);
@@ -129,7 +129,7 @@ class SolrAggregate extends Aggregate implements SolrRel {
           return new Pair<>(aggregation.getName(), "*");
         }
       case 1:
-        String inName = inNames.get(args.get(0));
+        String inName = inNames.get(args.getFirst());
         String name = implementor.fieldMappings.getOrDefault(inName, inName);
         if (SUPPORTED_AGGREGATIONS.contains(aggregation)) {
           return new Pair<>(aggregation.getName(), name);
